Set drawer-content-padding: 0.7rem to allow space for scrollbar; Fixes #2105

--- a/app/assets/stylesheets/companion_window.scss
+++ b/app/assets/stylesheets/companion_window.scss
@@ -43,7 +43,7 @@
   --font-size-base: 14px;
   --tab-width: 48px;
   --tab-height: 48px;
-  --drawer-content-padding: 1rem;
+  --drawer-content-padding: 0.7rem;
   --text-color: rgba(0, 0, 0, 0.87);
   --border-color: #5f574f;
   --button-color: #454545;
